@@ -3,6 +3,7 @@
 * Allow nx=1 for Stem and Error
 * Bugfix for drawing single axis
 * Bugfix for missing options parsing for some of MGL commands
+* Bugfix for .pmin suffix in MGL. Add mglData::MaximalNeg() and mglData::MinimalPos() functions. Add .nmin and .nmax suffixes.
 * Bugfix for colorbar labels
 * Allow to disable colorbar labels
 * Speed up PDE solving
